Read complete chapter of 8 and start chapter of 9
Signed-off-by: sunguangchao <1198125767@qq.com>